@@ -1,17 +1,19 @@
 package com.busanit.busan_subway_project.service;
 
+import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.util.UriComponents;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.net.*;
 import java.nio.charset.StandardCharsets;
+import java.util.Map;
+import java.util.Objects;
 
 @Service
 public class OpenApiService {
@@ -24,23 +26,21 @@ public class OpenApiService {
         this.serviceKey = serviceKey;
     }
 
-    public String getSubScheduleData(String sname) throws URISyntaxException, IOException {
+    public String getSubScheduleData(String sname) {
 
         String url = "http://data.humetro.busan.kr/voc/api/open_api_process.tnn";
 
-        //URI uri = new URI(url);
-
         System.out.println(serviceKey);
 
-        UriComponentsBuilder builder = UriComponentsBuilder
+        UriComponents builder = UriComponentsBuilder
                 .fromHttpUrl(url.toString())
-                .queryParam("serviceKey", URLEncoder.encode(serviceKey,"UTF-8"))
+                .queryParam("serviceKey", URLEncoder.encode(serviceKey, StandardCharsets.UTF_8))
                 .queryParam("scode", 101)
                 .queryParam("act", "xml")
-                .encode(StandardCharsets.UTF_8);
+                .build();
 
-        System.out.println(builder.toUriString());
+        System.out.println(builder.toString());
 
-        return restTemplate.getForObject(builder.toUriString(), String.class);
+        return restTemplate.getForObject(builder.toString(), String.class);
     }
 }
